--- a/MyPortfolio/Views/Shared/Components/_LayoutSideBarComponentPartial/Default.cshtml
+++ b/MyPortfolio/Views/Shared/Components/_LayoutSideBarComponentPartial/Default.cshtml
@@ -43,6 +43,12 @@
 				</a>
 			</li>
 			<li class="nav-item">
+				<a href="/Default/Index/">
+					<i class="la la-home"></i>
+					<p>Siteye Git</p>
+				</a>
+			</li>
+			<li class="nav-item">
 				<a href="components.html">
 					<i class="la la-table"></i>
 					<p>Hakkımda</p>
@@ -91,14 +97,14 @@
 			</a>
 			</li>
 			<li class="nav-item">
-			<a href="icons.html">
-				<i class="la la-fonticons"></i>
+			<a href="/Message/Inbox/">
+				<i class="la la-envelope-o"></i>
 				<p>Gelen Kutusu</p>
 			</a>
 			</li>
 			<li class="nav-item">
-			<a href="icons.html">
-				<i class="la la-fonticons"></i>
+			<a href="/Statistic/Index/">
+				<i class="la la-bar-chart"></i>
 				<p>İstatistikler</p>
 			</a>
 			</li>
