--- a/MyPortfolio/Views/Shared/Components/_ContactComponentPartial/Default.cshtml
+++ b/MyPortfolio/Views/Shared/Components/_ContactComponentPartial/Default.cshtml
@@ -8,7 +8,7 @@
             <h3>İletişim</h3>
             <h1>Bana Ulaşın</h1>
 
-            <p class="lead">Lorem ipsum Dolor adipisicing nostrud et aute Excepteur amet commodo ea dolore irure esse Duis nulla sint fugiat cillum ullamco proident aliquip quis qui voluptate dolore veniam Ut laborum non est in officia.</p>
+            <p class="lead">@ViewBag.aboutTitle</p>
         </div>
     </div>
 
@@ -18,21 +18,21 @@
                 <fieldset>
 
                     <div class="form-field">
-                        <input name="contactName" type="text" id="contactName" placeholder="Name" value="" minlength="2" required="" aria-required="true" class="full-width">
+                        <input name="contactName" type="text" id="contactName" placeholder="AdSoyad" value="" minlength="2" required="" aria-required="true" class="full-width">
                     </div>
                     <div class="form-field">
-                        <input name="contactEmail" type="email" id="contactEmail" placeholder="Email" value="" required="" aria-required="true" class="full-width">
+                        <input name="contactEmail" type="email" id="contactEmail" placeholder="E-mail" value="" required="" aria-required="true" class="full-width">
                     </div>
                     <div class="form-field">
-                        <input name="contactSubject" type="text" id="contactSubject" placeholder="Subject" value="" class="full-width">
+                        <input name="contactSubject" type="text" id="contactSubject" placeholder="Konu" value="" class="full-width">
                     </div>
                     <div class="form-field">
-                        <textarea name="contactMessage" id="contactMessage" placeholder="message" rows="10" cols="50" required="" aria-required="true" class="full-width"></textarea>
+                        <textarea name="contactMessage" id="contactMessage" placeholder="Mesaj" rows="10" cols="50" required="" aria-required="true" class="full-width"></textarea>
                     </div>
                     <div class="form-field">
-                        <button class="full-width btn--primary">Submit</button>
+                        <button class="full-width btn--primary">Gönder</button>
                         <div class="submit-loader">
-                            <div class="text-loader">Sending...</div>
+                            <div class="text-loader">Gönderiliyor...</div>
                             <div class="s-loader">
                                 <div class="bounce1"></div>
                                 <div class="bounce2"></div>
@@ -46,34 +46,32 @@
 
             <!-- contact-warning -->
             <div class="message-warning">
-                Something went wrong. Please try again.
+                Hata oluştu. Tekrar Deneyin.
             </div>
 
             <!-- contact-success -->
             <div class="message-success">
-                Your message was sent, thank you!<br>
+              Mesajınız iletildi,teşekkürler.<br>
             </div>
 
         </div>
         <div class="col-four tab-full contact__infos">
-            <h4 class="h06">Phone</h4>
+            <h4 class="h06">Telefon</h4>
             <p>
-                Phone: (+63) 555 1212<br>
-                Mobile: (+63) 555 0100<br>
-                Fax: (+63) 555 0101
+                Phone: @ViewBag.phone1<br>
+                Mobile: @ViewBag.phone2<br>
+                @* Fax: (+63) 555 0101 *@
             </p>
 
             <h4 class="h06">Email</h4>
             <p>
-                someone@holawebsite.com<br>
-                info@holawebsite.com
+                @ViewBag.email1<br>
+                @ViewBag.email2
             </p>
 
-            <h4 class="h06">Address</h4>
+            <h4 class="h06">Adres</h4>
             <p>
-                1600 Amphitheatre Parkway<br>
-                Mountain View, CA<br>
-                94043 US
+                @ViewBag.adres
             </p>
         </div>
 
