--- a/MyPortfolio/Views/Shared/Components/_FeatureComponentPartial/Default.cshtml
+++ b/MyPortfolio/Views/Shared/Components/_FeatureComponentPartial/Default.cshtml
@@ -40,19 +40,19 @@
 
     <ul class="home-social">
         <li>
-            <a href="#"><i class="im im-facebook" aria-hidden="true"></i><span>Facebook</span></a>
+            <a href="https://tr-tr.facebook.com/"><i class="im im-facebook" aria-hidden="true"></i><span>Facebook</span></a>
         </li>
         <li>
-            <a href="#"><i class="im im-twitter" aria-hidden="true"></i><span>Twiiter</span></a>
+            <a href="https://x.com/i/flow/login"><i class="im im-twitter" aria-hidden="true"></i><span>Twitter</span></a>
         </li>
         <li>
-            <a href="#"><i class="im im-instagram" aria-hidden="true"></i><span>Instagram</span></a>
+            <a href="https://www.instagram.com/"><i class="im im-instagram" aria-hidden="true"></i><span>Instagram</span></a>
         </li>
         <li>
-            <a href="#"><i class="im im-behance" aria-hidden="true"></i><span>Behance</span></a>
+            <a href="https://www.linkedin.com/"><i class="im im-linkedin" aria-hidden="true"></i><span>LinkedIn</span></a>
         </li>
         <li>
-            <a href="#"><i class="im im-pinterest" aria-hidden="true"></i><span>Pinterest</span></a>
+            <a href="https://tr.pinterest.com/login/"><i class="im im-pinterest" aria-hidden="true"></i><span>Pinterest</span></a>
         </li>
     </ul>
     <!-- end home-social -->
