--- a/MyPortfolio/Views/Shared/Components/_FooterComponentPartial/Default.cshtml
+++ b/MyPortfolio/Views/Shared/Components/_FooterComponentPartial/Default.cshtml
@@ -4,36 +4,36 @@
         <div class="col-full">
 
             <div class="footer-logo">
-                <a class="footer-site-logo" href="#0"><img src="~/hola-master/images/logo.png" alt="Homepage"></a>
+                <a class="footer-site-logo" href="" #about" class="scroll-link smoothscroll"><img src="~/hola-master/images/logo.png" alt="Homepage"></a>
             </div>
 
             <ul class="footer-social">
                 <li>
-                    <a href="#0">
+                    <a href="https://tr-tr.facebook.com/">
                         <i class="im im-facebook" aria-hidden="true"></i>
                         <span>Facebook</span>
                     </a>
                 </li>
                 <li>
-                    <a href="#0">
+                    <a href="https://x.com/i/flow/login">
                         <i class="im im-twitter" aria-hidden="true"></i>
                         <span>Twitter</span>
                     </a>
                 </li>
                 <li>
-                    <a href="#0">
+                    <a href="https://www.instagram.com/">
                         <i class="im im-instagram" aria-hidden="true"></i>
                         <span>Instagram</span>
                     </a>
                 </li>
                 <li>
-                    <a href="#0">
-                        <i class="im im-behance" aria-hidden="true"></i>
-                        <span>Behance</span>
+                    <a href="https://www.linkedin.com/">
+                        <i class="im im-linkedin" aria-hidden="true"></i>
+                        <span>LinkedIn</span>
                     </a>
                 </li>
                 <li>
-                    <a href="#0">
+                    <a href="https://tr.pinterest.com/login/">
                         <i class="im im-pinterest" aria-hidden="true"></i>
                         <span>Pinterest</span>
                     </a>
@@ -48,7 +48,7 @@
         <div class="col-twelve">
             <div class="copyright">
                 <span>© Copyright MyPortfolio @DateTime.Now.Year</span>
-                <span>Design by <a href="https://www.styleshout.com/">Asp.Net core 6.0</a></span>
+                <span>Design by <a href="https://www.styleshout.com/">sedaydemir</a></span>
             </div>
 
             <div class="go-top">
