--- a/MyPortfolio/Views/Shared/Components/_NavbarComponentPartial/Default.cshtml
+++ b/MyPortfolio/Views/Shared/Components/_NavbarComponentPartial/Default.cshtml
@@ -9,7 +9,7 @@
             <li class="current"><a class="smoothscroll" href="#home" title="home">AnaSayfa</a></li>
             <li><a class="smoothscroll" href="#about" title="about">Hakkımda</a></li>
             <li><a class="smoothscroll" href="#works" title="works">Projelerim</a></li>
-            <li><a class="smoothscroll" href="#blog" title="blog">Referanslarım</a></li>
+            <li><a class="smoothscroll" href="#testimonial" title="testimonial">Referanslarım</a></li>
             <li><a class="smoothscroll" href="#contact" title="contact">iletişim</a></li>
         </ul>
     </nav>
