--- a/MyPortfolio/Views/Shared/Components/_StatisticComponentPartial/Default.cshtml
+++ b/MyPortfolio/Views/Shared/Components/_StatisticComponentPartial/Default.cshtml
@@ -3,30 +3,30 @@
 
         <div class="col-block stats__col ">
             <div class="stats__count">
-                150
+                1
             </div>
-            <h4>Awards Received</h4>
+            <h4>Kullanılan Projeler</h4>
         </div>
         <div class="col-block stats__col">
             <div class="stats__count">
-                1256
+                26
             </div>
-            <h4>Cups of Coffee</h4>
+            <h4>Hedef Proje Sayısı</h4>
         </div>
         <div class="col-block stats__col stats__col--highlight">
             <div class="stats__upsign">
                 <a href="#"><i class="im im-arrow-up" aria-hidden="true"></i></a>
             </div>
             <div class="stats__count">
-                110
+               4
             </div>
-            <h4>Projects Completed</h4>
+            <h4>Bitmiş Projeler</h4>
         </div>
         <div class="col-block stats__col">
             <div class="stats__count">
-                101
+                2
             </div>
-            <h4>Happy Clients</h4>
+            <h4>Aktif Proje Sayısı</h4>
         </div>
 
     </div>
