--- a/MyPortfolio/Views/Shared/Components/_TestimonialComponentPartial/Default.cshtml
+++ b/MyPortfolio/Views/Shared/Components/_TestimonialComponentPartial/Default.cshtml
@@ -1,55 +1,71 @@
-﻿<div class="s-testimonials">
+﻿@* @model List<MyPortfolio.DAL.Entities.Testimonial>
 
+<section id="testimonial" class="s-testimonials target-section">
     <div class="overlay"></div>
 
     <div class="row testimonials-header">
         <div class="col-full">
-            <h1 class="h02">İnsanlar benim için ne dediler?</h1>
+            <h1 class="h02">Hakkımda, kim ne dedi?</h1>
         </div>
     </div>
 
-    <div class="row testimonials">
-
+    @foreach (var item in Model)
+    {
+    <div class="row testimonials"> 
         <div class="col-full testimonials__slider">
-
             <div class="testimonials__slide">
-                <img src="~/hola-master/images/avatars/user-01.jpg" alt="Author image" class="testimonials__avatar">
+                <img src="@item.ImageUrl" alt="Author image" class="testimonials__avatar">
                 <p>
-                    Qui ipsam temporibus quisquam velMaiores eos cumque distinctio nam accusantium ipsum.
-                    Laudantium quia consequatur molestias delectus culpa facere hic dolores aperiam. Accusantium quos qui praesentium corpori.
+                   @item.Descriptiion
                 </p>
                 <div class="testimonials__author h06">
-                    Tim Cook
-                    <span>CEO, Apple</span>
+                    @item.NameSurname
+                    <span>@item.Title</span>
+                </div>
+            </div> 
+        </div>
+    </div> 
+  }
+</section> *@
+
+@model List<MyPortfolio.DAL.Entities.Testimonial>
+
+    .align-left {
+    text-align: left;
+    margin-left: 0;
+}
+
+.align-right {
+    text-align: right;
+    margin-right: 0;
+}
+
+<section id="testimonial" class="s-testimonials target-section">
+    <div class="overlay"></div>
+
+    <div class="row testimonials-header">
+        <div class="col-full">
+            <h1 class="h02">Hakkımda, kim ne dedi?</h1>
+        </div>
+    </div>
+
+    @foreach (var item in Model)
+    {
+        <div class="row testimonials">
+            <div class="col-full testimonials__slider">
+                <div class="testimonials__slide @((item.TestimonialId % 2 == 0) ? "align-left" : "align-right")">
+                    <img src="@item.ImageUrl" alt="Author image" class="testimonials__avatar">
+                    <p>
+                        @item.Descriptiion
+                    </p>
+                    <div class="testimonials__author h06">
+                        @item.NameSurname
+                        <span>@item.Title</span>
+                    </div>
                 </div>
             </div>
+        </div>
+    }
+</section>
 
-            <div class="testimonials__slide">
-                <img src="~/hola-master/images/avatars/user-05.jpg" alt="Author image" class="testimonials__avatar">
-                <p>
-                    Excepturi nam cupiditate culpa doloremque deleniti repellat. Veniam quos repellat voluptas animi adipisci.
-                    Nisi eaque consequatur. Quasi voluptas eius distinctio. Atque eos maxime. Qui ipsam temporibus quisquam vel.
-                </p>
-                <div class="testimonials__author h06">
-                    Sundar Pichai
-                    <span>CEO, Google</span>
-                </div>
-            </div>
 
-            <div class="testimonials__slide">
-                <img src="~/hola-master/images/avatars/user-02.jpg" alt="Author image" class="testimonials__avatar">
-                <p>
-                    Repellat dignissimos libero. Qui sed at corrupti expedita voluptas odit. Nihil ea quia nesciunt. Ducimus aut sed ipsam.
-                    Autem eaque officia cum exercitationem sunt voluptatum accusamus. Quasi voluptas eius distinctio.
-                </p>
-                <div class="testimonials__author h06">
-                    Satya Nadella
-                    <span>CEO, Microsoft</span>
-                </div>
-            </div>
-
-        </div> <!-- end testimonials__slider -->
-
-    </div> <!-- end testimonials -->
-
-</div> <!-- end s-testimonials -->
