--- a/MyPortfolio/Views/Shared/Components/_AboutComponentPartial/Default.cshtml
+++ b/MyPortfolio/Views/Shared/Components/_AboutComponentPartial/Default.cshtml
@@ -25,10 +25,10 @@
     <div class="row about-content about-content--buttons">
 
         <div class="col-six tab-full left">
-            <a href="#0" class="btn btn--primary full-width">CV'mi İndir</a>
+            <a href="~/files/cv.pdf" class="btn btn--primary full-width">CV'mi İndir</a>
         </div>
         <div class="col-six tab-full right">
-            <a href="#0" class="btn full-width">Bana Yazın</a>
+            <a href="#contact" class="btn full-width">Bana Yazın</a>
         </div>
 
     </div> <!-- end about-content buttons -->
