--- a/MyPortfolio/Views/Shared/Components/_LayoutNavbarComponentPartial/Default.cshtml
+++ b/MyPortfolio/Views/Shared/Components/_LayoutNavbarComponentPartial/Default.cshtml
@@ -4,7 +4,7 @@
 <div class="main-header">
 	<div class="logo-header">
 		<a href="index.html" class="logo">
-			sedaa Admin Paneli
+			Admin Paneli
 		</a>
 		<button class="navbar-toggler sidenav-toggler ml-auto" type="button" data-toggle="collapse" data-target="collapse" aria-controls="sidebar" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
@@ -63,7 +63,7 @@
 							</div>
 						</li>
 						<li>
-							<a class="see-all" href="javascript:void(0);"> <strong>See all notifications</strong> <i class="la la-angle-right"></i> </a>
+							<a class="see-all" href="javascript:void(0);"> <strong>Tüm Bildirimleri Gör..</strong> <i class="la la-angle-right"></i> </a>
 						</li>
 					</ul>
 				</li>
