--- a/MyPortfolio/Views/Shared/Components/_LayoutSideBarComponentPartial/Default.cshtml
+++ b/MyPortfolio/Views/Shared/Components/_LayoutSideBarComponentPartial/Default.cshtml
@@ -49,7 +49,7 @@
 				</a>
 			</li>
 			<li class="nav-item">
-				<a href="components.html">
+				<a href="/About/Index/">
 					<i class="la la-table"></i>
 					<p>Hakkımda</p>
 				</a>
@@ -73,31 +73,31 @@
 				</a>
 			</li>
 			<li class="nav-item">
-				<a href="notifications.html">
+				<a href="/Contact/Index/">
 					<i class="la la-bell"></i>
 					<p>İletişim Bilgilerim</p>
 				</a>
 			</li>
 			<li class="nav-item ">
-				<a href="typography.html">
+				<a href="/Portfolio/Index/">
 					<i class="la la-font"></i>
 					<p>Portfolyo</p>
 				</a>
 			</li>
 			<li class="nav-item">
-				<a href="icons.html">
+				<a href="/Skill/Index/">
 					<i class="la la-fonticons"></i>
 					<p>Yeteneklerim</p>
 				</a>
 			</li>
 			<li class="nav-item">
-			<a href="icons.html">
+			<a href="/Testimonial/Index/">
 				<i class="la la-fonticons"></i>
 				<p>Referanslarım</p>
 			</a>
 			</li>
 			<li class="nav-item">
-			<a href="icons.html">
+				<a href="/SocialMedia/Index/">
 				<i class="la la-fonticons"></i>
 				<p>Sosyal Medya</p>
 			</a>
